# BlackListEngine

./: CMakeLists.txt  README.md  core.cpp  core.h  dbmanager.cpp  dbmanager.h  engine.cpp  engine.h  iohandler.cpp  iohandler.h  jsonprinter.cpp  jsonprinter.h  main.cpp  menuhandler.cpp  menuhandler.h  utils.cpp  utils.h
